# apigen

./: .gitignore  CMakeLists.txt  apigen_definitions.h  entity.cpp  entity.h  entity_registry.cpp  entity_registry.h  entity_types.cpp  entity_types.h  enum_bitwise.h  export_writer.h  main.cpp  makefile  parsing.h  qualified_type.cpp  qualified_type.h  type_exporters.h
src/: apigen_definitions.h  basic_naming_convention.h  cpp_writer.h  dependency_analyzer.cpp  dependency_analyzer.h  entity.cpp  entity.h  entity_registry.h  exporter.cpp  exporter.h  internal_name_printer.cpp  internal_name_printer.h  main.cpp  misc.h  naming_convention.cpp  naming_convention.h  parser.h  types.cpp  types.h
src/entity_kinds/: constructor_entity.h  enum_entity.h  field_entity.cpp  field_entity.h  function_entity.h  method_entity.h  record_entity.cpp  record_entity.h  user_type_entity.h
